# ascifight

./: .gitignore  Dockerfile  README.md  pyproject.toml
ascifight/: board.py  board_actions.py  board_computations.py  board_data.py  board_setup.py  client.py  config.py  config.toml  draw.py  game.py  game_loop.py  globals.py  main.py  pixel_draw.py  server_config.toml  util.py  view_3D.py
ascifight/board/: actions.py  computations.py  data.py  setup.py
ascifight/client_lib/: Dockerfile  agents.py  basic.py  basic_functions.py  client.py  config.toml  dijkstra.py  dijsktra.py  infra.py  logic.py  metrics.py  movement.py  object.py  state.py  statistics.py  test_logic.py  view_3D.py
ascifight/go_client/: client.go  go.mod
ascifight/routers/: computations.py  orders.py  other.py  router_utils.py  states.py
ascifight/templates/: index.html
src/ascifight/: draw.py  game.py  game_loop.py  globals.py  main.py  util.py
src/ascifight/board/: actions.py  data.py  setup.py
src/ascifight/client_lib/: Dockerfile  agents.py  basic_functions.py  client.py  client_config.toml  dijkstra.py  game_loop.py  infra.py  logic.py  metrics.py  state.py  test_client.py  view_3D.py
src/ascifight/go_client/: client.go
src/ascifight/routers/: orders.py  other.py  router_utils.py  states.py
tests/: board_computations_test.py
