[tool.poetry]
name = "ascifight"
version = "0.3.0"
description = ""
authors = ["serbitar <serbitar@sessionmob.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
structlog = "^23.2.0"
toml = "^0.10.2"
pillow = "^10.0.1"
httpx = "^0.25.0"
vpython = "^7.6.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
black = "^23.9.1"
types-toml = "^0.10.8.7"
pytest = "^7.4.2"
types-pillow = "^10.0.0.3"
vulture = "^2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
